--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Pretendard, Cinzel 등 폰트 import해도 좋음 */
-/* body {
-  @apply bg-gray-100 dark:bg-night text-gray-900 dark:text-white transition-colors duration-300;
-} */
+@layer utilities {
+  .animate-fade-in {
+    @apply opacity-0;
+    animation: fadeIn 1s ease-out forwards;
+  }
+
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
+}
